--- a/assets/css/new_order.css
+++ b/assets/css/new_order.css
@@ -562,6 +562,36 @@
   }
 }
 
+.order-page.new .tbl-wrap td .product-info .product-not {
+  width: 100%;
+  height: 28px;
+  padding: 0 12px;
+  margin-bottom: 26px;
+  border: 1px solid #FF6900;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-size: 12px;
+  color: #FF6900;
+  border-radius: 2px;
+}
+
+.order-page.new .tbl-wrap td .product-info .product-not p {
+  padding-left: 22px;
+  line-height: 16px;
+  background: url(../img/etc/ico_not.svg) no-repeat 0 50%/14px;
+}
+
+.order-page.new .tbl-wrap td .product-info .product-not a {
+  text-decoration: underline;
+}
+
 .order-page.new .cus-check input {
   display: none;
 }
@@ -716,9 +746,9 @@
   background-color: #2517B5;
 }
 
-.ui-state-disabled,
-.ui-widget-content .ui-state-disabled,
-.ui-widget-header .ui-state-disabled {
+.ui-state-disabled span,
+.ui-widget-content .ui-state-disabled span,
+.ui-widget-header .ui-state-disabled span {
   text-decoration: line-through;
 }
 
@@ -828,7 +858,7 @@
     padding: 0 5.55556vw;
   }
   .order-page.new h2 {
-    font-size: 5vw;
+    font-size: 18px;
   }
   .order-page.new .step-top {
     display: -webkit-box;
@@ -845,7 +875,7 @@
   .order-page.new .select-wrap .__btn {
     border: 1px solid #E0E0E0;
     border-radius: 2px;
-    font-size: 3.33333vw;
+    font-size: 12px;
     color: #000;
     padding: 0;
     width: 21.66667vw;
@@ -905,10 +935,10 @@
     line-height: 5.83333vw;
   }
   .order-page.new .result-price .sum-box dl dt {
-    font-size: 4.44444vw;
+    font-size: 16px;
   }
   .order-page.new .result-price .sum-box dl dd {
-    font-size: 5vw;
+    font-size: 18px;
     margin-top: 0;
   }
   .order-page.new .result-price .sum-box dl:first-child {
@@ -931,12 +961,12 @@
             align-items: center;
   }
   .order-page.new .result-price .total-price-box .txt span {
-    font-size: 4.44444vw;
+    font-size: 16px;
     color: #2517B5;
     font-weight: 700;
   }
   .order-page.new .result-price .total-price-box .txt b {
-    font-size: 5vw;
+    font-size: 18px;
     color: #000;
     font-weight: 900;
     margin-left: 8px;
@@ -945,7 +975,7 @@
     margin-top: 0;
   }
   .order-page.new .btn-wrap .__buy {
-    font-size: 4.44444vw;
+    font-size: 16px;
     width: 100%;
     height: 12.22222vw;
   }
@@ -960,7 +990,7 @@
             align-items: center;
   }
   .order-page.new .stxt-point span {
-    font-size: 3.33333vw;
+    font-size: 12px;
     margin-top: 0;
     margin-left: 1.94444vw;
   }
@@ -1014,7 +1044,7 @@
     display: none;
   }
   .order-page.new .tbl-wrap td .total-txt {
-    font-size: 5vw;
+    font-size: 18px;
     margin-bottom: 0;
   }
   .order-page.new .tbl-wrap td .product-info {
@@ -1044,12 +1074,12 @@
     margin-right: 4.44444vw;
   }
   .order-page.new .tbl-wrap td .product-info .product-name .pro-tit {
-    font-size: 3.88889vw;
+    font-size: 14px;
     line-height: 5.55556vw;
     margin-bottom: 2.22222vw;
   }
   .order-page.new .tbl-wrap td .product-info .product-name .pro-set {
-    font-size: 3.33333vw;
+    font-size: 12px;
     line-height: 4.72222vw;
     margin-bottom: 1.11111vw;
   }
@@ -1081,7 +1111,7 @@
         -ms-flex-align: center;
             align-items: center;
     border: 0 solid #000;
-    font-size: 3.88889vw;
+    font-size: 14px;
     color: #333;
     width: 11.11111vw;
     text-align: center;
@@ -1092,7 +1122,7 @@
     border: 1px solid #EAEAEA;
     border-left: 0 solid #eaeaea;
     background-color: #fff;
-    font-size: 3.33333vw;
+    font-size: 12px;
     color: #b4b4b4;
   }
   .order-page.new .tbl-wrap td .product-info .product-name .pro-number button:hover, .order-page.new .tbl-wrap td .product-info .product-name .pro-number button:focus {
@@ -1125,10 +1155,10 @@
     margin-right: auto;
   }
   .order-page.new .tbl-wrap td .product-info .product-count > span input {
-    font-size: 3.88889vw;
+    font-size: 14px;
   }
   .order-page.new .tbl-wrap td .product-info .product-count > span button {
-    font-size: 3.33333vw;
+    font-size: 12px;
   }
   .order-page.new .tbl-wrap td .product-info .product-count .total-price {
     display: block;
@@ -1137,7 +1167,7 @@
   }
   .order-page.new .tbl-wrap td .product-info .product-count > b {
     display: block;
-    font-size: 3.88889vw;
+    font-size: 14px;
   }
   .order-page.new .tbl-wrap td .product-info .product-count.order-last {
     -webkit-box-ordinal-group: 6;
@@ -1175,7 +1205,7 @@
     margin-bottom: 0;
   }
   .order-page.new .tbl-wrap td .product-info .product-add li span {
-    font-size: 3.33333vw;
+    font-size: 12px;
   }
   .order-page.new .tbl-wrap td .product-info .product-add li .add-name {
     width: auto;
@@ -1223,7 +1253,7 @@
         -ms-flex-align: center;
             align-items: center;
     border: 0 solid #000;
-    font-size: 3.88889vw;
+    font-size: 14px;
     color: #333;
     width: 11.11111vw;
     text-align: center;
@@ -1235,7 +1265,7 @@
     border: 1px solid #EAEAEA;
     border-left: 0 solid #eaeaea;
     background-color: #fff;
-    font-size: 3.33333vw;
+    font-size: 12px;
     color: #b4b4b4;
   }
   .order-page.new .tbl-wrap td .product-info .product-add li .add-number button:hover, .order-page.new .tbl-wrap td .product-info .product-add li .add-number button:focus {
@@ -1250,14 +1280,14 @@
     margin-top: 5.55556vw;
   }
   .order-page.new .tbl-wrap td .product-info .reserved-delivery .btn-reserved {
-    font-size: 3.33333vw;
+    font-size: 12px;
     width: 100%;
     height: 8.88889vw;
     padding: 0 0 0 3.33333vw;
     background: #fff url(../img/etc/ico_arrow_right.svg) no-repeat right 5% top 50%/1.61111vw;
   }
   .order-page.new .tbl-wrap td .product-info .reserved-delivery .delivery-ing {
-    font-size: 3.33333vw;
+    font-size: 12px;
     width: 100%;
     height: 8.88889vw;
     padding: 0 3.33333vw;
@@ -1270,13 +1300,13 @@
     color: #FF6900;
   }
   .order-page.new .tbl-wrap td .product-info .reserved-delivery .delivery-ing button {
-    font-size: 3.33333vw;
+    font-size: 12px;
   }
   .order-page.new .tbl-wrap td .product-info .reserved-delivery .delivery-ing button.btn-modify {
     margin-left: 3.33333vw;
   }
   .order-page.new .tbl-wrap td .product-info .reserved-delivery .lettering {
-    font-size: 3.33333vw;
+    font-size: 12px;
     font-weight: 400;
     padding: 0 3.33333vw;
     height: 8.88889vw;
@@ -1314,7 +1344,7 @@
     width: 3.88889vw;
   }
   .order-page.new .stxt-point span {
-    font-size: 3.33333vw;
+    font-size: 12px;
     margin-left: 1.66667vw;
   }
   #reservationDateOptionLayer {
