--- a/assets/scss/new_order.scss
+++ b/assets/scss/new_order.scss
@@ -404,6 +404,28 @@
                             }
                         }
                     }
+
+                    .product-not {
+                        width: 100%;
+                        height: 28px;
+                        padding:0 12px;
+                        margin-bottom: 26px;
+                        border: 1px solid #FF6900;
+                        display: flex;
+                        justify-content: space-between;
+                        align-items: center;
+                        font-size: 12px;
+                        color:#FF6900;
+                        border-radius: 2px;
+                        p {
+                            padding-left: 22px;
+                            line-height: 16px;
+                            background: url(../img/etc/ico_not.svg) no-repeat 0 50% / 14px;
+                        }
+                        a {
+                            text-decoration: underline;
+                        }
+                    }
                 }
             }
         }
@@ -532,9 +554,9 @@
     color:#fff;
     background-color: #2517B5;
 }
-.ui-state-disabled, 
-.ui-widget-content .ui-state-disabled, 
-.ui-widget-header .ui-state-disabled {
+.ui-state-disabled span, 
+.ui-widget-content .ui-state-disabled span, 
+.ui-widget-header .ui-state-disabled span {
     text-decoration: line-through;
 }
 .calendar-layer .ui-datepicker td {
@@ -616,7 +638,7 @@
             overflow:hidden;
             padding:0 vw(20);
             h2 {
-                font-size: vw(18);
+                font-size: 18px;
             }
             .step-top {
                 display: flex;
@@ -628,7 +650,7 @@
                 .__btn {                
                     border: 1px solid #E0E0E0;
                     border-radius: 2px;
-                    font-size: vw(12);
+                    font-size: 12px;
                     color:#000;
                     padding:0;
                     width: vw(78);
@@ -676,10 +698,10 @@
                         margin-top: vw(10);
                         line-height: vw(21);
                         dt {
-                            font-size: vw(16);
+                            font-size: 16px;
                         }
                         dd {
-                            font-size: vw(18);
+                            font-size: 18px;
                             margin-top: 0;
                         }
                         &:first-child {
@@ -696,12 +718,12 @@
                         justify-content: space-between;
                         align-items: center;
                         span {
-                            font-size: vw(16);
+                            font-size: 16px;
                             color: #2517B5;
                             font-weight: 700;
                         }
                         b {
-                            font-size: vw(18);
+                            font-size: 18px;
                             color:#000;
                             
                             font-weight: 900;
@@ -713,7 +735,7 @@
             .btn-wrap {
                 margin-top: 0;
                 .__buy {
-                    font-size: vw(16);
+                    font-size: 16px;
                     width: 100%;
                     height: vw(44);                
                 }
@@ -724,7 +746,7 @@
                 display: inline-flex;
                 align-items: center;
                 span {
-                    font-size: vw(12);
+                    font-size: 12px;
                     margin-top: 0;
                     margin-left: vw(7);
                 }
@@ -771,7 +793,7 @@
                         display: none;
                     }
                     .total-txt {
-                        font-size: vw(18);
+                        font-size: 18px;
                         margin-bottom: 0;
                     }
                     .product-info {
@@ -790,12 +812,12 @@
                                 margin-right: vw(16);
                             }
                             .pro-tit {
-                                font-size: vw(14);
+                                font-size: 14px;
                                 line-height: vw(20);
                                 margin-bottom: vw(8);
                             }
                             .pro-set {
-                                font-size: vw(12);
+                                font-size: 12px;
                                 line-height: vw(17);
                                 margin-bottom: vw(4);
                             }
@@ -815,7 +837,7 @@
                                     justify-content: center;
                                     align-items: center;
                                     border: 0 solid #000;
-                                    font-size: vw(14);
+                                    font-size: 14px;
                                     color:#333;
                                     width: vw(40);
                                     text-align: center;
@@ -826,7 +848,7 @@
                                     border: 1px solid #EAEAEA;
                                     border-left: 0 solid #eaeaea;
                                     background-color: #fff;
-                                    font-size: vw(12);
+                                    font-size: 12px;
                                     color:#b4b4b4;
                                     &:hover,&:focus {
                                         color:#fff;
@@ -849,10 +871,10 @@
                                 display: flex;
                                 margin-right: auto;
                                 input {
-                                    font-size: vw(14);
+                                    font-size: 14px;
                                 }
                                 button {
-                                    font-size: vw(12);
+                                    font-size: 12px;
                                 }
                             }
                             .total-price {
@@ -862,7 +884,7 @@
                             }    
                             > b {
                                 display: block;
-                                font-size: vw(14);
+                                font-size: 14px;
                             }     
                             &.order-last {
                                 order:5;
@@ -892,7 +914,7 @@
                                     margin-bottom: 0;
                                 }
                                 span {
-                                    font-size: vw(12);
+                                    font-size: 12px;
                                 }
                                 .add-name {
                                     width: auto;
@@ -928,7 +950,7 @@
                                         justify-content: center;
                                         align-items: center;
                                         border: 0 solid #000;
-                                        font-size: vw(14);
+                                        font-size: 14px;
                                         color:#333;
                                         width: vw(40);
                                         text-align: center;
@@ -940,7 +962,7 @@
                                         border: 1px solid #EAEAEA;
                                         border-left: 0 solid #eaeaea;
                                         background-color: #fff;
-                                        font-size: vw(12);
+                                        font-size: 12px;
                                         color:#b4b4b4;
                                         &:hover,&:focus {
                                             color:#fff;
@@ -956,14 +978,14 @@
                             width: 100%;
                             margin-top: vw(20);
                             .btn-reserved {
-                                font-size: vw(12);
+                                font-size: 12px;
                                 width: 100%;
                                 height: vw(32);
                                 padding:0 0 0 vw(12);
                                 background: #fff url(../img/etc/ico_arrow_right.svg) no-repeat right 5% top 50% / vw(5.8);
                             }
                             .delivery-ing {
-                                font-size: vw(12);
+                                font-size: 12px;
                                 width: 100%;
                                 height: vw(32);
                                 padding:0 vw(12);
@@ -977,14 +999,14 @@
                                     }
                                 }
                                 button {
-                                    font-size: vw(12);
+                                    font-size: 12px;
                                     &.btn-modify {
                                         margin-left: vw(12);
                                     }
                                 }
                             }
                             .lettering {
-                                font-size: vw(12);
+                                font-size: 12px;
                                 font-weight: 400;
                                 padding: 0 vw(12);
                                 height: vw(32);
@@ -1022,7 +1044,7 @@
                     width: vw(14);
                 }
                 span {
-                    font-size: vw(12);
+                    font-size: 12px;
                     margin-left: vw(6);
                 }
             }
